fixed padding/margin gaps on video-container

--- a/app/assets/styles/modules/_video-container.css
+++ b/app/assets/styles/modules/_video-container.css
@@ -5,6 +5,7 @@
 	padding-top: 26.2px;
 	height: 0;
 	overflow: hidden; 
+	background-color: #000;
 
 	&--p-top {
 		padding-top: 28px;
